--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="mapbox_red">#E91E63</color>
+    <color name="mapbox_green">#4CAF50</color>
+    <color name="mapbox_blue">#1E8CAB</color>
 </resources>
