--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="mapbox_red">#E91E63</color>
     <color name="mapbox_green">#4CAF50</color>
     <color name="mapbox_blue">#1E8CAB</color>
+    <color name="black">#000000</color>
 </resources>
