--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,6 +49,7 @@
     <!--<color name="pink2">#e0e0e0</color>-->
     <color name="gray1">#e0e0e0</color>
     <color name="gray2">#868686</color>
+    <color name="gray3">#e3e3e3</color>
     <color name="red1">#f12525</color>
     <color name="red2">#ff3000</color>
     <color name="red3">#ff3600</color>
