--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -13,7 +13,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="320dp"
             android:background="?attr/colorPrimary">
 
         </LinearLayout>
@@ -27,8 +27,8 @@
     <ImageView
         android:id="@+id/imageViewPerson"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="110dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="210dp"
         android:foregroundGravity="center"
         android:src="@drawable/img_profile" />
 
@@ -57,38 +57,41 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/activity_mid_margin"
-        android:layout_marginRight="@dimen/activity_mid_margin"
         android:gravity="bottom"
         android:orientation="vertical"
         android:weightSum="1">
 
-        <Button
-            android:id="@+id/buttonLogin"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_large_margin"
-            android:layout_marginRight="@dimen/activity_large_margin"
-            android:layout_marginBottom="@dimen/activity_large_margin"
-            android:background="@drawable/border_blue_2"
-            android:text="@string/login"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textSizeLarge" />
+            android:layout_margin="@dimen/activity_large_padding">
+
+            <Button
+                android:id="@+id/buttonLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_large_padding"
+                android:layout_marginRight="@dimen/activity_large_padding"
+                android:layout_marginBottom="@dimen/activity_large_padding"
+                android:background="@drawable/border_blue_1"
+                android:text="@string/login"
+                android:textColor="@color/black"
+                android:textSize="@dimen/textSizeLarge"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/activity_mid_margin"
             android:gravity="center"
-            android:text="نسخه 1.1.0.1"
+            android:text="@string/version"
             android:textColor="@color/text_color2" />
 
         <TextView
             android:id="@+id/textViewFooter"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
             android:background="@color/gray3"
             android:gravity="center"
             android:text="@string/company_site"
@@ -100,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/imageViewPerson"
         android:layout_alignParentStart="true"
-        android:layout_margin="@dimen/activity_mid_margin"
+        android:layout_margin="@dimen/activity_large_padding"
         android:foregroundGravity="center"
         android:gravity="center"
         android:orientation="vertical">
@@ -109,18 +112,18 @@
             android:id="@+id/linearLayoutUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_large_margin"
-            android:layout_marginRight="@dimen/activity_large_margin"
+            android:layout_marginLeft="@dimen/activity_large_padding"
+            android:layout_marginRight="@dimen/activity_large_padding"
             android:layout_marginBottom="@dimen/activity_mid_margin"
-            android:background="@drawable/border_"
+            android:background="@drawable/border_2"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/editTextUsername"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/border"
+                android:background="@drawable/border_1"
                 android:gravity="center"
                 android:hint="@string/username"
                 android:inputType="number"
@@ -138,10 +141,10 @@
             android:id="@+id/linearLayoutPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_large_margin"
-            android:layout_marginRight="@dimen/activity_large_margin"
+            android:layout_marginLeft="@dimen/activity_large_padding"
+            android:layout_marginRight="@dimen/activity_large_padding"
             android:layout_marginBottom="@dimen/activity_mid_margin"
-            android:background="@drawable/border_"
+            android:background="@drawable/border_2"
             android:orientation="horizontal">
 
             <EditText
@@ -149,7 +152,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/border"
+                android:background="@drawable/border_1"
                 android:gravity="center"
                 android:hint="@string/password"
                 android:inputType="numberPassword"
