--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <!--<color name="colorPrimary">#008577</color>-->
+    <!--<color name="colorPrimaryDark">#00574B</color>-->
+    <!--<color name="colorAccent">#D81B60</color>-->
+
+    <color name="colorPrimary">#1668d0</color>
+    <color name="colorPrimaryDark">#4386f5</color>
+    <color name="colorAccent">#FF4081</color>
+
     <color name="mapbox_red">#E91E63</color>
     <color name="mapbox_green">#4CAF50</color>
     <color name="mapbox_blue">#1E8CAB</color>
