--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,7 +48,7 @@
     <color name="blue1">#2061C8</color>
     <color name="blue2">#52A8CC</color>
     <color name="blue3">#6ca9b2</color>
-    <color name="blue4">#25455E</color>
+    <color name="blue4">#1C3549</color>
 
     <color name="pink1">#94649c</color>
     <!--<color name="pink2">#e0e0e0</color>-->
