--- a/app/src/main/res/layout/item_address_2.xml
+++ b/app/src/main/res/layout/item_address_2.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/border_blue_1"
+        android:background="@drawable/border_blue_2"
         android:orientation="vertical">
 
         <LinearLayout
@@ -31,7 +31,7 @@
             <LinearLayout
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:background="@color/blue2" />
 
             <TextView
                 android:id="@+id/textViewPeymayesh"
@@ -48,7 +48,7 @@
             <LinearLayout
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:background="@color/blue2" />
 
             <TextView
                 android:id="@+id/textViewExaminationDay"
@@ -65,7 +65,7 @@
             <LinearLayout
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:background="@color/blue2" />
 
             <TextView
                 android:id="@+id/textViewServiceGroup"
@@ -82,7 +82,7 @@
             <LinearLayout
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:background="@color/blue2" />
 
             <TextView
                 android:id="@+id/textViewAddress"
@@ -100,7 +100,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/white" />
+            android:background="@color/blue2" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -123,7 +123,7 @@
             <LinearLayout
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:background="@color/blue2" />
 
             <TextView
                 android:id="@+id/textViewTrackNumber"
@@ -140,7 +140,7 @@
             <LinearLayout
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:background="@color/blue2" />
 
             <TextView
                 android:id="@+id/textViewNotificationMobile"
@@ -157,7 +157,7 @@
             <LinearLayout
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:background="@color/blue2" />
 
             <TextView
                 android:id="@+id/textViewMoshtarakMobile"
@@ -174,7 +174,7 @@
             <LinearLayout
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:background="@color/blue2" />
 
             <TextView
                 android:id="@+id/textViewNeighbourBillId"
