--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -4,6 +4,8 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/activity_mid_margin"
+    android:layout_marginBottom="@dimen/activity_mid_margin"
     tools:context=".Activities.ListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
