--- a/app/src/main/res/layout/main2_activity.xml
+++ b/app/src/main/res/layout/main2_activity.xml
@@ -75,7 +75,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="@string/download"
+                    android:text="@string/downloadDetails"
                     android:textColor="@color/black"
                     android:textSize="@dimen/textSizeLarge"
                     android:textStyle="bold" />
