--- a/app/src/main/res/layout/form_activity.xml
+++ b/app/src/main/res/layout/form_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
+    android:id="@+id/constraintLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
@@ -9,6 +9,7 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -16,6 +17,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_large_margin"
+            android:layout_marginTop="@dimen/activity_large_margin"
+            android:layout_marginRight="@dimen/activity_large_margin"
             android:gravity="center"
             android:orientation="horizontal"
             tools:ignore="MissingConstraints">
@@ -24,56 +28,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_large_margin"
+                android:gravity="center"
                 android:text="خدمات:"
                 android:textColor="@color/blue4"
                 android:textSize="@dimen/textSizeLarge"
                 android:textStyle="bold" />
 
-            <CheckBox
-                android:id="@+id/checkbox1"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_large_margin"
-                android:text="انشعاب آب"
-                android:textColor="@color/blue4"
-                android:textSize="@dimen/textSizeLarge" />
-
-            <CheckBox
-                android:id="@+id/checkbox2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_large_margin"
-                android:text="انشعاب فاضلاب"
-                android:textColor="@color/blue4"
-                android:textSize="@dimen/textSizeLarge" />
-
-            <CheckBox
-                android:id="@+id/checkbox3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_large_margin"
-                android:text="نظام مهندسی"
-                android:textColor="@color/blue4"
-                android:textSize="@dimen/textSizeLarge" />
-
-            <CheckBox
-                android:id="@+id/checkbox4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_large_margin"
-                android:text="کنتور مجزا"
-                android:textColor="@color/blue4"
-                android:textSize="@dimen/textSizeLarge" />
-
-            <CheckBox
-                android:id="@+id/checkbox5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_large_margin"
-                android:text="لوله گذاری اصلی"
-                android:textColor="@color/blue4"
-                android:textSize="@dimen/textSizeLarge" />
-
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="vertical"
+                tools:ignore="MissingConstraints" />
         </LinearLayout>
 
         <ScrollView
@@ -82,6 +50,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/activity_medium_margin"
             android:layout_marginRight="@dimen/activity_medium_margin"
+            android:layout_marginBottom="@dimen/activity_medium_margin"
             android:background="@drawable/border_gray_1"
             android:padding="@dimen/activity_mid_padding">
 
@@ -313,7 +282,7 @@
                         android:singleLine="true" />
 
                     <CheckBox
-                        android:id="@+id/checkbox6"
+                        android:id="@+id/checkbox1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -330,6 +299,7 @@
                         android:gravity="center"
                         android:inputType="number"
                         android:lines="1"
+                        android:maxLength="10"
                         android:maxLines="1"
                         android:singleLine="true" />
 
@@ -367,7 +337,12 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:inputType="phone"
+                        android:lines="1"
+                        android:maxLength="9"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                 </LinearLayout>
 
@@ -424,7 +399,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="اعیان غیرمسکونی"
                         android:textColor="@color/blue4"
@@ -479,7 +454,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="نام خانوادگی"
                         android:textColor="@color/blue4"
@@ -490,9 +465,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
-                        android:text="تلفن ثابت"
+                        android:text="شماره همراه"
                         android:textColor="@color/blue4"
                         android:textSize="@dimen/textSizeLarge"
                         android:textStyle="bold" />
@@ -520,7 +495,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
                         android:gravity="center"
                         android:inputType="number"
@@ -565,7 +540,11 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:lines="1"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/editText14"
@@ -585,7 +564,7 @@
                         android:gravity="center" />
 
                     <CheckBox
-                        android:id="@+id/checkbox7"
+                        android:id="@+id/checkbox2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -599,7 +578,11 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:lines="1"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/editText22"
@@ -608,7 +591,11 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:lines="1"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/editText25"
@@ -617,16 +604,25 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:inputType="phone"
+                        android:lines="1"
+                        android:maxLength="9"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/editText27"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="77dp"
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="right|top"
+                        android:inputType="text"
+                        android:lines="2"
+                        android:maxLines="1"
+                        android:singleLine="true" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -638,7 +634,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="شناسه قبض"
                         android:textColor="@color/blue4"
@@ -682,7 +678,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
-                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="left"
                         android:text="اعیان کل"
                         android:textColor="@color/blue4"
@@ -788,7 +784,11 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:lines="1"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/editText9"
@@ -815,7 +815,11 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:lines="1"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/editText17"
@@ -828,11 +832,11 @@
 
 
                     <CheckBox
-                        android:id="@+id/checkbox8"
+                        android:id="@+id/checkbox3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_margin="@dimen/activity_medium_margin"
                         android:gravity="center" />
 
                     <EditText
@@ -842,7 +846,12 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:lines="1"
+                        android:maxLength="10"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/editText23"
@@ -851,7 +860,11 @@
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:lines="1"
+                        android:maxLines="1"
+                        android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/editText28"
@@ -861,7 +874,7 @@
                         android:layout_margin="@dimen/activity_medium_margin"
                         android:background="@drawable/border_gray_1"
                         android:gravity="right|top"
-                        android:inputType="number"
+                        android:inputType="text"
                         android:lines="4"
                         android:maxLines="1"
                         android:singleLine="true" />
