--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -16,5 +16,24 @@
         android:divider="@null"
         android:dividerHeight="0dp"
         android:scrollbars="vertical"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints">
+
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/textViewEmpty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:text="رکوردی یافت نشد!"
+        android:textColor="@color/red1"
+        android:textSize="@dimen/textSizeLarge"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="562dp"
+        tools:layout_editor_absoluteY="379dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
