--- a/app/src/main/res/layout/main2_activity.xml
+++ b/app/src/main/res/layout/main2_activity.xml
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="@string/form"
+                    android:text="@string/form1"
                     android:textColor="@color/black"
                     android:textSize="@dimen/textSizeLarge"
                     android:textStyle="bold" />
