--- a/app/src/main/res/layout/form1_activity.xml
+++ b/app/src/main/res/layout/form1_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context=".Activities.FormActivity">
+    tools:context=".Activities.Form1Activity">
 
 
     <LinearLayout
